--- a/3.html
+++ b/3.html
@@ -33,7 +33,7 @@
         </div>
         <div class="gh-header-right">
           <div class="gh-user-info">
-            <span class="material-icons" aria-hidden="true"
+            <span class="material-symbols-outlined" aria-hidden="true"
               >person_outline</span
             >
             <span>Welcome, Gary</span>
@@ -102,7 +102,7 @@
                 <th>
                   Group Availability
                   <span
-                    class="material-icons gh-info-icon"
+                    class="material-symbols-outlined gh-info-icon"
                     title="Number of groups that can be accommodated"
                     >info</span
                   >
