--- a/4.html
+++ b/4.html
@@ -37,7 +37,7 @@
         </div>
         <div class="gh-header-right">
           <div class="gh-user-info">
-            <span class="material-icons" aria-hidden="true"
+            <span class="material-symbols-outlined" aria-hidden="true"
               >person_outline</span
             >
             <span>Welcome, Gary</span>
@@ -89,7 +89,8 @@
 
       <div class="gh-back-link">
         <a href="#" id="back-link"
-          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+          ><span class="material-symbols-outlined">keyboard_arrow_left</span
+          >Back</a
         >
       </div>
     </main>
