--- a/5.html
+++ b/5.html
@@ -33,7 +33,7 @@
         </div>
         <div class="gh-header-right">
           <div class="gh-user-info">
-            <span class="material-icons" aria-hidden="true"
+            <span class="material-symbols-outlined" aria-hidden="true"
               >person_outline</span
             >
             <span>Welcome, Gary</span>
@@ -68,7 +68,7 @@
             type="button"
           >
             <span class="gh-select-value">Select</span>
-            <span class="material-icons">expand_more</span>
+            <span class="material-symbols-outlined">expand_more</span>
           </button>
           <ul class="gh-select-options" role="listbox" hidden>
             <li class="gh-select-option" role="option" data-value="mce">
@@ -103,7 +103,7 @@
           aria-expanded="false"
         >
           <span
-            class="material-icons gh-add-icon gh-toggle-icon"
+            class="material-symbols-outlined gh-add-icon gh-toggle-icon"
             aria-hidden="true"
             >add_circle_outline</span
           >
@@ -165,7 +165,7 @@
                   type="button"
                 >
                   <span class="gh-select-value">Select</span>
-                  <span class="material-icons">expand_more</span>
+                  <span class="material-symbols-outlined">expand_more</span>
                 </button>
                 <ul class="gh-select-options" role="listbox" hidden>
                   <li class="gh-select-option" role="option" data-value="hvac">
@@ -201,7 +201,9 @@
           <strong>Not finding the account you're looking for?</strong>
         </div>
         <div class="gh-create-account">
-          <span class="material-icons gh-create-icon" aria-hidden="true"
+          <span
+            class="material-symbols-outlined gh-create-icon"
+            aria-hidden="true"
             >person_add_alt</span
           >
           <a href="#" id="create-account-link">Create a customer account</a>
@@ -221,7 +223,8 @@
 
       <div class="gh-back-link">
         <a href="#" id="back-link"
-          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+          ><span class="material-symbols-outlined">keyboard_arrow_left</span
+          >Back</a
         >
       </div>
     </main>
