--- a/7.html
+++ b/7.html
@@ -33,7 +33,7 @@
         </div>
         <div class="gh-header-right">
           <div class="gh-user-info">
-            <span class="material-icons" aria-hidden="true"
+            <span class="material-symbols-outlined" aria-hidden="true"
               >person_outline</span
             >
             <span>Welcome, Gary</span>
@@ -72,7 +72,7 @@
             type="button"
           >
             <span class="gh-select-value">Select attendee name(s)</span>
-            <span class="material-icons">expand_more</span>
+            <span class="material-symbols-outlined">expand_more</span>
           </button>
           <ul class="gh-select-options" role="listbox" hidden>
             <li class="gh-select-option" role="option" data-value="none">
@@ -133,7 +133,8 @@
       </div>
       <div class="gh-back-link">
         <a href="#" id="back-link"
-          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+          ><span class="material-symbols-outlined">keyboard_arrow_left</span
+          >Back</a
         >
       </div>
     </main>
@@ -185,7 +186,7 @@
                   optionLabels[value]
                 }</span><br />
                 <a href=\"#\" class=\"gh-add-details-link\" data-index=\"${idx}\" style=\"color: #0074c2; text-decoration: underline; font-size: 0.97em; display: inline-flex; align-items: center; gap: 0.2em;\">
-                  <span class=\"material-icons\" style=\"font-size: 1em; vertical-align: middle;\">${
+                  <span class=\"material-symbols-outlined text-14\" style=\"font-size: 1em; vertical-align: middle;\">${
                     expandedIndex === idx ? 'remove' : 'add'
                   }</span>
                   ${
