--- a/9.html
+++ b/9.html
@@ -33,7 +33,7 @@
         </div>
         <div class="gh-header-right">
           <div class="gh-user-info">
-            <span class="material-icons" aria-hidden="true"
+            <span class="material-symbols-outlined" aria-hidden="true"
               >person_outline</span
             >
             <span>Welcome, Gary</span>
@@ -232,7 +232,7 @@
               <td>Michaud Cooley Erickson</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #009e3c; vertical-align: middle"
                   >check_circle</span
                 >
@@ -244,7 +244,7 @@
               <td>Michaud Cooley Erickson</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #009e3c; vertical-align: middle"
                   >check_circle</span
                 >
@@ -256,7 +256,7 @@
               <td>TMS Johnson</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #e53935; vertical-align: middle"
                   >error</span
                 >
@@ -268,7 +268,7 @@
               <td>Northland Mechanical</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #e53935; vertical-align: middle"
                   >error</span
                 >
@@ -280,7 +280,7 @@
               <td>IMS Johnson</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #e53935; vertical-align: middle"
                   >error</span
                 >
@@ -292,7 +292,7 @@
               <td>TMS Johnson</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #e53935; vertical-align: middle"
                   >error</span
                 >
@@ -304,7 +304,7 @@
               <td>Countryside Plumbing Electric & Heating</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #e53935; vertical-align: middle"
                   >error</span
                 >
@@ -316,7 +316,7 @@
               <td>Schadegg Mechanical</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #e53935; vertical-align: middle"
                   >error</span
                 >
@@ -328,7 +328,7 @@
               <td>IMS Johnson</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #e53935; vertical-align: middle"
                   >error</span
                 >
@@ -340,7 +340,7 @@
               <td>Legend Mechanical</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #e53935; vertical-align: middle"
                   >error</span
                 >
@@ -372,7 +372,7 @@
               <td>TMS JOHNSON INC 1344</td>
               <td>
                 <span
-                  class="material-icons"
+                  class="material-symbols-outlined"
                   style="color: #009e3c; vertical-align: middle"
                   >check_circle</span
                 >
@@ -503,7 +503,7 @@
           id="close-edit-company"
           aria-label="Close"
         >
-          <span class="material-icons">close</span>
+          <span class="material-symbols-outlined">close</span>
         </button>
         <h2 id="editCompanyTitle" style="margin-top: 0">
           Edit Company Additional Information
@@ -582,7 +582,7 @@ Develop and maintain long-standing partnerships with our customers. From emergen
           id="close-edit-attendee"
           aria-label="Close"
         >
-          <span class="material-icons">close</span>
+          <span class="material-symbols-outlined">close</span>
         </button>
         <h2 id="editAttendeeTitle" style="margin-top: 0">
           Edit Attendee Additional Information
@@ -697,7 +697,7 @@ Greenheck product overviews and demos. Unique advantages offered over competitor
         aria-labelledby="editRepTitle"
       >
         <button class="gh-modal-close" id="close-edit-rep" aria-label="Close">
-          <span class="material-icons">close</span>
+          <span class="material-symbols-outlined">close</span>
         </button>
         <h2 id="editRepTitle" style="margin-top: 0">
           Edit Rep Attendee Additional Information
