--- a/rep-attendees.html
+++ b/rep-attendees.html
@@ -9,7 +9,9 @@
     </div>
     <div class="gh-header-right">
       <div class="gh-user-info">
-        <span class="material-icons" aria-hidden="true">person_outline</span>
+        <span class="material-symbols-outlined" aria-hidden="true"
+          >person_outline</span
+        >
         <span>Welcome, Gary</span>
       </div>
       <span class="gh-header-title">Customer Visit Planner</span>
