--- a/6.html
+++ b/6.html
@@ -9,15 +9,10 @@
       name="description"
       content="Add attendees for your Greenheck customer visit."
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <link rel="stylesheet" href="styles/base.css" />
   </head>
@@ -33,7 +28,7 @@
         </div>
         <div class="gh-header-right">
           <div class="gh-user-info">
-            <span class="material-icons" aria-hidden="true"
+            <span class="material-symbols-outlined" aria-hidden="true"
               >person_outline</span
             >
             <span>Welcome, Gary</span>
@@ -75,7 +70,7 @@
             type="button"
           >
             <span class="gh-select-value">Select attendee name(s)</span>
-            <span class="material-icons">expand_more</span>
+            <span class="material-symbols-outlined">expand_more</span>
           </button>
           <ul class="gh-select-options" role="listbox" hidden>
             <li class="gh-select-option" role="option" data-value="emma">
@@ -112,7 +107,7 @@
           aria-expanded="false"
         >
           <span
-            class="material-icons gh-add-icon gh-toggle-icon"
+            class="material-symbols-outlined gh-add-icon gh-toggle-icon"
             aria-hidden="true"
             >add_circle_outline</span
           >
@@ -176,7 +171,7 @@
                   type="button"
                 >
                   <span class="gh-select-value">Select</span>
-                  <span class="material-icons">expand_more</span>
+                  <span class="material-symbols-outlined">expand_more</span>
                 </button>
                 <ul class="gh-select-options" role="listbox" hidden>
                   <li class="gh-select-option" role="option" data-value="hvac">
@@ -211,7 +206,9 @@
         <div class="gh-need-account">
           <p>Need to add another account?</p>
           <a href="#" id="create-account-link-bottom">
-            <span class="material-icons gh-create-icon" aria-hidden="true"
+            <span
+              class="material-symbols-outlined gh-create-icon"
+              aria-hidden="true"
               >person_add_alt</span
             >
             Add another customer account
@@ -228,7 +225,8 @@
       </div>
       <div class="gh-back-link">
         <a href="#"
-          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+          ><span class="material-symbols-outlined">keyboard_arrow_left</span
+          >Back</a
         >
       </div>
     </main>
