--- a/8.html
+++ b/8.html
@@ -33,7 +33,7 @@
         </div>
         <div class="gh-header-right">
           <div class="gh-user-info">
-            <span class="material-icons" aria-hidden="true"
+            <span class="material-symbols-outlined" aria-hidden="true"
               >person_outline</span
             >
             <span>Welcome, Gary</span>
@@ -290,7 +290,8 @@
       </div>
       <div class="gh-back-link">
         <a href="#" id="back-link"
-          ><span class="material-icons">keyboard_arrow_left</span>Back</a
+          ><span class="material-symbols-outlined">keyboard_arrow_left</span
+          >Back</a
         >
       </div>
     </main>
