--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="gh-header-right">
           <div class="gh-user-info">
-            <span class="material-icons" aria-hidden="true"
+            <span class="material-symbols-outlined" aria-hidden="true"
               >person_outline</span
             >
             <span>Welcome, Gary</span>
