--- a/6.html
+++ b/6.html
@@ -211,7 +211,7 @@
               aria-hidden="true"
               >person_add_alt</span
             >
-            Add another customer account
+            <span class="gh-create-label">Add another customer account</span>
           </a>
         </div>
       </section>
