--- a/6.html
+++ b/6.html
@@ -226,7 +226,7 @@
       <div class="gh-back-link">
         <a href="#"
           ><span class="material-symbols-outlined">keyboard_arrow_left</span
-          >Back</a
+          ><span class="gh-back-link-text">Back</span></a
         >
       </div>
     </main>
