--- a/4.html
+++ b/4.html
@@ -85,7 +85,7 @@
       <div class="gh-back-link">
         <a href="#" id="back-link"
           ><span class="material-symbols-outlined">keyboard_arrow_left</span
-          >Back</a
+          ><span class="gh-back-link-text">Back</span></a
         >
       </div>
     </main>
