--- a/7.html
+++ b/7.html
@@ -130,7 +130,7 @@
       <div class="gh-back-link">
         <a href="#" id="back-link"
           ><span class="material-symbols-outlined">keyboard_arrow_left</span
-          >Back</a
+          ><span class="gh-back-link-text">Back</span></a
         >
       </div>
     </main>
@@ -188,8 +188,8 @@
                 <span class=\"gh-selected-attendee-name\">${
                   optionLabels[value]
                 }</span><br />
-                <a href=\"#\" class=\"gh-add-details-link\" data-index=\"${idx}\" style=\"color: #0074c2; text-decoration: underline; font-size: 0.97em; display: inline-flex; align-items: center; gap: 0.2em;\">
-                  <span class=\"material-symbols-outlined text-14\" style=\"font-size: 1em; vertical-align: middle;\">${
+                <a href=\"#\" class=\"gh-add-details-link\" data-index=\"${idx}\">
+                  <span class=\"material-symbols-outlined text-14\" >${
                     expandedIndex === idx ? 'remove' : 'add'
                   }</span>
                   ${
