--- a/8.html
+++ b/8.html
@@ -62,10 +62,12 @@
           <div
             id="attendee-radio-group"
             style="
-              display: flex;
-              flex-wrap: wrap;
-              gap: 2.5rem;
-              margin-top: 0.5rem;
+              display: grid;
+              grid-template-columns: repeat(4, 1fr);
+              gap: 15px;
+              margin-top: 12px;
+              font-size: 15px;
+              font-weight: 600;
             "
           >
             <label
