--- a/2.html
+++ b/2.html
@@ -59,7 +59,7 @@
               <th>
                 Group Availability
                 <span
-                  class="material-symbols-outlined text-14"
+                  class="material-symbols-outlined text-14 flex-center"
                   title="Number of groups that can be accommodated"
                   >help</span
                 >
