--- a/4.html
+++ b/4.html
@@ -56,7 +56,7 @@
               <th>
                 Number of Groups
                 <span
-                  class="material-symbols-outlined text-14"
+                  class="material-symbols-outlined text-14 flex-center"
                   title="Number of groups that can be accommodated"
                   >help</span
                 >
